<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_image">Add image...</string>
    <string name="app_name">NanoPost</string>
    <string name="add_post">Adding post...</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="continue_button">Continue</string>
    <string name="create_post">Create post</string>
    <string name="delete_image">Delete image</string>
    <string name="delete_post">Delete post</string>
    <string name="edit">Edit</string>
    <string name="enter_name">Enter name...</string>
    <string name="enter_text">Enter text...</string>
    <string name="exit">Exit</string>
    <string name="feed">Feed</string>
    <string name="images">images</string>
    <string name="images_count">0</string>
    <string name="images_title">Images</string>
    <string name="likes_count">0</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="new_post">New post...</string>
    <string name="no_images">No images</string>
    <string name="password">Password</string>
    <string name="post">Post</string>
    <string name="posts">posts</string>
    <string name="posts_count">0</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="retry">Retry</string>
    <string name="save_changes">Save changes</string>
    <string name="something_wrong_network">There\'s something wrong with your network connection</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribers">subscribers</string>
    <string name="subscribers_count">0</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="username">Username</string>

</resources>