<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/round_arrow_back_24"
            app:title="@string/new_post"
            app:titleCentered="true"
            app:titleTextColor="?colorOnSurface"
            app:menu="@menu/new_post_top_menu"/>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/enter_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:hint="@string/enter_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <HorizontalScrollView
        android:id="@+id/picked_images_containers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/picked_image_container0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/enter_text_field"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/picked_image0"
                    android:layout_width="220dp"
                    android:layout_height="184dp"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/rounded"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/delete_image_button0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cancel_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/picked_image_container1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/enter_text_field"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/picked_image1"
                    android:layout_width="220dp"
                    android:layout_height="184dp"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/rounded"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/delete_image_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cancel_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/picked_image_container2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/enter_text_field"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/picked_image2"
                    android:layout_width="220dp"
                    android:layout_height="184dp"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/rounded"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/delete_image_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cancel_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/picked_image_container3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/enter_text_field"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/picked_image3"
                    android:layout_width="220dp"
                    android:layout_height="184dp"
                    android:layout_margin="4dp"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/rounded"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/delete_image_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cancel_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <com.google.android.material.chip.Chip
        android:id="@+id/add_image_button"
        style="@style/Widget.Material3.Chip.Suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_image"
        app:chipIcon="@drawable/outline_add_photo_24"
        app:chipIconEnabled="true"
        app:chipIconSize="18dp"
        app:chipIconTint="?colorPrimary"
        app:ensureMinTouchTargetSize="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_text_field" />

</androidx.constraintlayout.widget.ConstraintLayout>